crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__emoji_identifiers.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/emoji_identifiers.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            11,
        ),
        range: 0..64,
        body: [
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        3,
                    ),
                    range: 0..5,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    1,
                                ),
                                range: 0..1,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                2,
                            ),
                            range: 5..5,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 32..37,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    5,
                                ),
                                range: 32..33,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                6,
                            ),
                            range: 37..37,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        10,
                    ),
                    range: 42..43,
                    value: UnaryOp(
                        ExprUnaryOp {
                            node_index: NodeIndex(
                                9,
                            ),
                            range: 42..43,
                            op: UAdd,
                            operand: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        8,
                                    ),
                                    range: 43..43,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | a = (🐶
  |      ^^ Syntax Error: Got unexpected token 🐶
2 |     # comment 🐶
3 | )
  |


  |
1 | a = (🐶
2 |     # comment 🐶
3 | )
  | ^ Syntax Error: Expected a statement
4 |
5 | a = (🐶 +
  |


  |
1 | a = (🐶
2 |     # comment 🐶
3 | )
  |  ^ Syntax Error: Expected a statement
4 |
5 | a = (🐶 +
6 |     # comment
  |


  |
3 | )
4 |
5 | a = (🐶 +
  |      ^^ Syntax Error: Got unexpected token 🐶
6 |     # comment
7 | 🐶)
  |


  |
5 | a = (🐶 +
6 |     # comment
7 | 🐶)
  | ^^ Syntax Error: Got unexpected token 🐶
  |


  |
5 | a = (🐶 +
6 |     # comment
7 | 🐶)
  |   ^ Syntax Error: Expected a statement
  |


  |
5 | a = (🐶 +
6 |     # comment
7 | 🐶)
  |    ^ Syntax Error: Expected a statement
  |
